schema/testdata/errors/api_duplicate_definitions.keel
api Web {
}

//expect-error:5:8:E017:You have a duplicate definition for 'api Web'
api Web {
}
